<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
        <name>imu-calib-ros</name>
        <version>0.1.0</version>
        <description>Wrapper node for imu-calib.</description>
        <maintainer email="stelzo@steado.de">Christopher Sieh</maintainer>
        <license>MIT or Apache 2</license>
        <author>Christopher Sieh</author>

        <depend>std_msgs</depend>
        <depend>sensor_msgs</depend>
        <depend>geometry_msgs</depend>
        <depend>rcl</depend>

        <export>
            <build_type>ament_cargo</build_type>
        </export>
</package>
